<resources>
    <string name="app_name">Lista de Aulas</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="editarAula">Editar Aula</string>
    <string name="titulo">Título da aula</string>
    <string name="materia">Matéria</string>
    <string name="link">Link da aula</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="saveSuccess">Aula gravada com sucesso.</string>
    <string name="updateSuccess">Aula atualizada com sucesso.</string>
    <string name="edit">Editar</string>
    <string name="actEdit">Editar</string>
    <string name="actDelete">Deletar</string>
    <string name="deleteMessage">"Deseja deletar a aula "</string>
    <string name="linkMessage">"Deseja ir ao link da aula "</string>
    <string name="fabAdd">Adicionar aula</string>
    <string name="about">Sobre o app</string>
    <string name="autorNome">Bruno de Oliveira Pereira</string>
    <string name="autor">Autor:</string>
    <string name="contact">Contato: bruno_blizz@hotmail.com</string>
    <string name="aboutText">Este aplicativo foi desenvolvido como trabalho final para a disciplina Desenvolvimento para Dispositívos móveis, do curso TADS no Instituto Federal do Paraná, campus Foz do Iguaçu.</string>
    <string name="version">Versão: 1.0</string>
    <string name="rights">Todos os direiros reservados</string>
    <string name="howTo">Como usar este aplicativo:</string>
    <string name="informations">Este aplicativo é uma lista para guardar links, com a temática \"Aula\". \n\nAo clicar no ícone com um símbolo de \"+\" no canto inferior direito da tela, você será direcionado a um formulário para ser preenchido. \n\nOs campos de \"Título\" e \"link\" são obrigatórios. \n\nNa página principal seus itens estarão em fortmato de lista, links do youtube aparecerão com um ícone de vídeo, os demais itens aparecerão com um ícone de navegador. \n\nClicar sobre um ícone direcionará você para seu link salvo. \n\nCom um clique longo você abrirá a opção de editar ou excluir o item clicado.</string>
    <string name="menu">Menu de ações</string>
    <string name="information">Informações de uso</string>
</resources>