<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditClassActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editarAula"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"/>

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:layout_margin="@dimen/margin"/>

    <EditText
        android:id="@+id/edtMatter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/materia"
        android:layout_margin="@dimen/margin" />

    <EditText
        android:id="@+id/edtLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_margin="@dimen/margin"
            android:backgroundTint="@color/cancel"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_margin="@dimen/margin"
            android:backgroundTint="@color/confirm" />
    </LinearLayout>



  </LinearLayout>